Added sleuth and zipkin. Included docker-compose to start dockerized zipkin

--- a/washing-machine/pom.xml
+++ b/washing-machine/pom.xml
@@ -31,6 +31,20 @@
 		</dependency>
 
 		<!-- ***************************************** -->
+		<!-- *** TRACEABILITY BETWEEN MICROSERVICES -->
+		<!-- ***************************************** -->
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+
+		<!-- ***************************************** -->
 		<!-- *** DATABASE -->
 		<!-- ***************************************** -->
 
