--- a/washing-machine/src/main/resources/application.properties
+++ b/washing-machine/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.application.name=washing-machine
 #LOGGING
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
+#ZIPKIN
+spring.zipkin.base-url=http://192.168.99.100:9411
+
 #DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/washing_machine_db
 spring.datasource.username=postgres
