--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: api-gateway
+  zipkin:
+    base-url: http://192.168.99.100:9411
 
   cloud:
     gateway:
