--- a/product/pom.xml
+++ b/product/pom.xml
@@ -22,6 +22,20 @@
 		</dependency>
 
 		<!-- ***************************************** -->
+		<!-- *** TRACEABILITY BETWEEN MICROSERVICES -->
+		<!-- ***************************************** -->
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+
+		<!-- ***************************************** -->
 		<!-- *** DATABASE -->
 		<!-- ***************************************** -->
 
