--- a/product/pom.xml
+++ b/product/pom.xml
@@ -49,6 +49,16 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- ***************************************** -->
+		<!-- *** SHARED -->
+		<!-- ***************************************** -->
+
+		<dependency>
+			<groupId>org.personal</groupId>
+			<artifactId>shared</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
