1.Refactored application.properties 2.Modified BIGSERIAL into BIGINT for foreign keys to avoid saving error

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,34 @@
 services:
-  postgres:
-    container_name: postgres
-    image: postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      PGDATA: /data/postgres
-    volumes:
-      - postgres-persistence:/data/postgres
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - postgres
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
-
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@personal.com
-      PGADMIN_DEFAULT_PASSWORD: postgres
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-    volumes:
-      - pgadmin-persistence:/var/lib/pgadmin
-    networks:
-      - postgres
-    ports:
-      - "5050:80"
-    restart: unless-stopped
+#  postgres:
+#    container_name: postgres
+#    image: postgres
+#    environment:
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
+#      PGDATA: /data/postgres
+#    volumes:
+#      - postgres-persistence:/data/postgres
+#      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+#    networks:
+#      - postgres
+#    ports:
+#      - "5432:5432"
+#    restart: unless-stopped
+#
+#  pgadmin:
+#    container_name: pgadmin
+#    image: dpage/pgadmin4
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: admin@personal.com
+#      PGADMIN_DEFAULT_PASSWORD: postgres
+#      PGADMIN_CONFIG_SERVER_MODE: "False"
+#    volumes:
+#      - pgadmin-persistence:/var/lib/pgadmin
+#    networks:
+#      - postgres
+#    ports:
+#      - "5050:80"
+#    restart: unless-stopped
 
   zipkin:
     image: openzipkin/zipkin
