--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: api-gateway
   zipkin:
-    base-url: http://192.168.99.100:9411
+    base-url: http://localhost:9411
 
   cloud:
     gateway:
