--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=product
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 #ZIPKIN
-spring.zipkin.base-url=http://192.168.99.100:9411
+spring.zipkin.base-url=http://localhost:9411
 
 #DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
