1. Added profiles for washing-machine, product and solar-panel 2. Moved resources to individual pom.xml to allow for placeholder filtering 3. Created different .properties, .yml files for the new profiles

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -63,5 +63,12 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <resources> <!-- Used to load placeholder property in yml files -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 </project>
