--- a/washing-machine/src/main/resources/application.properties
+++ b/washing-machine/src/main/resources/application.properties
@@ -1,27 +1,1 @@
-#SERVER PORT
-server.port=8080
-spring.application.name=washing-machine
-
-#LOGGING
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-
-#ZIPKIN
-spring.zipkin.base-url=http://localhost:9411
-
-#DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/washing_machine_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-#SCHEMA AND DATA INITIALIZATION
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:/schema.sql
-spring.sql.init.continue-on-error=true
-
-#MULTIPART SIZE
-spring.servlet.multipart.max-file-size=3MB
-spring.servlet.multipart.max-request-size=12MB
+spring.profiles.active=@activatedProfile@
