1. Modified profile docker to run using containers 2. Adjusted docker-compose.yaml to include all services 3. Added configuration to washing-machine in profiles for feign client

--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -10,12 +10,12 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: washing-machines
+        - id: washing-machine
           uri: http://localhost:8080
           predicates:
             - Path=/api/v1/washing-machines/**
 
-        - id: products
+        - id: product
           #TODO: Change this URI to localhost:8081
           uri: http://localhost:8080
           predicates:
