--- a/washing-machine/src/main/resources/application-dev.properties
+++ b/washing-machine/src/main/resources/application-dev.properties
@@ -25,3 +25,8 @@ spring.sql.init.continue-on-error=true
 #MULTIPART SIZE
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=12MB
+
+#WORKAROUND TO HAVE THE FEIGN CLIENT COMMUNICATE BASED ON SELECTED PROFILE
+#TODO: Find an easier fix. Avoid Eureka Server for now.
+#TODO: always update this if you modify the APIs of product microservice
+product.service.url=http://localhost:8081/api/v1/products
