--- a/washing-machine/src/main/resources/application-docker.properties
+++ b/washing-machine/src/main/resources/application-docker.properties
@@ -6,10 +6,10 @@ spring.application.name=washing-machine
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 #ZIPKIN
-spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.base-url=http://zipkin:9411
 
 #DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/washing_machine_db
+spring.datasource.url=jdbc:postgresql://postgres:5432/washing_machine_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=postgresql
@@ -25,3 +25,8 @@ spring.sql.init.continue-on-error=true
 #MULTIPART SIZE
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=12MB
+
+#WORKAROUND TO HAVE THE FEIGN CLIENT COMMUNICATE BASED ON SELECTED PROFILE
+#TODO: Find an easier fix. Avoid Eureka Server for now.
+#TODO: always update this if you modify the APIs of product microservice
+product.service.url=http://product:8081/api/v1/products
