--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -5,19 +5,19 @@ spring:
   application:
     name: api-gateway
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
 
   cloud:
     gateway:
       routes:
-        - id: washing-machines
-          uri: http://localhost:8080
+        - id: washing-machine
+          uri: http://washing-machine:8080
           predicates:
             - Path=/api/v1/washing-machines/**
 
-        - id: products
-          #TODO: Change this URI to localhost:8081
-          uri: http://localhost:8080
+        - id: product
+          #TODO: Change this URI to product:8081!
+          uri: http://washing-machine:8080
           predicates:
             - Path=/api/v1/products/**
 
