--- a/product/src/main/resources/application-docker.properties
+++ b/product/src/main/resources/application-docker.properties
@@ -6,10 +6,10 @@ spring.application.name=product
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 #ZIPKIN
-spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.base-url=http://zipkin:9411
 
 #DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
+spring.datasource.url=jdbc:postgresql://postgres:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=postgresql
