--- a/solar-panel/src/main/resources/application-docker.properties
+++ b/solar-panel/src/main/resources/application-docker.properties
@@ -3,7 +3,7 @@ server.port=8084
 spring.application.name=solar-panel
 
 #DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
+spring.datasource.url=jdbc:postgresql://postgres:5432/solar_panel_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=postgresql
