--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.personal</groupId>
-        <artifactId>hephaestus-services</artifactId>
+        <artifactId>hephaestus-api</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
