--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.personal</groupId>
-    <artifactId>hephaestus-services</artifactId>
+    <artifactId>hephaestus-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>hephaestus-services</name>
+    <name>hephaestus-api</name>
 
     <modules>
         <module>product</module>
