--- a/product/pom.xml
+++ b/product/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>org.personal</groupId>
-		<artifactId>hephaestus-services</artifactId>
+		<artifactId>hephaestus-api</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
