Fix for requests travelling to the users controller

--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -10,15 +10,11 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: user
-          uri: http://localhost:8080
-          predicates:
-            - Path=/api/v1/users/**
-
+        #TODO: Add proper security
         - id: washing-machine
           uri: http://localhost:8080
           predicates:
-            - Path=/api/v1/washing-machines/**
+            - Path=/api/v1/washing-machines/**, /api/v1/users/**
 
         - id: product
           #TODO: Change this URI to localhost:8081
