--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
                     <configuration>
                         <source>17</source>
                         <target>17</target>
+                        <!-- Fix for open feign: PathVariable annotation was empty -->
                         <compilerArgs>
                             <arg>-parameters</arg>
                         </compilerArgs>
