Removed unused properties files from individual modules.

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -63,8 +63,9 @@
             </plugin>
         </plugins>
 
-        <resources> <!-- Used to load placeholder property in yml files -->
+        <resources>
             <resource>
+                <!-- Used to load @activatedProfile@, the placeholder property in application.properties files -->
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
