--- a/washing-machine/pom.xml
+++ b/washing-machine/pom.xml
@@ -126,8 +126,9 @@
 	</profiles>
 
 	<build>
-		<resources> <!-- Used to load placeholder property in yml files -->
+		<resources>
 			<resource>
+				<!-- Used to load @activatedProfile@, the placeholder property in application.properties files -->
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 			</resource>
