--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.boot.maven.plugin.version>2.7.11</spring.boot.maven.plugin.version>
-        <spring.boot.dependencies.version>2.7.11</spring.boot.dependencies.version>
-        <spring-cloud.version>2021.0.8</spring-cloud.version>
+        <spring.boot.maven.plugin.version>3.3.2</spring.boot.maven.plugin.version>
+        <spring.boot.dependencies.version>3.3.2</spring.boot.dependencies.version>
+        <spring-cloud.version>2023.0.2</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -50,6 +50,12 @@
 
     <dependencies>
         <!-- Will be available in all modules -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-properties-migrator</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
