--- a/product/src/main/resources/application-dev.properties
+++ b/product/src/main/resources/application-dev.properties
@@ -5,8 +5,9 @@ spring.application.name=product
 #LOGGING
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
-#ZIPKIN
-spring.zipkin.base-url=http://localhost:9411
+#TRACING
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 #DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
