--- a/product/src/main/resources/application-docker.properties
+++ b/product/src/main/resources/application-docker.properties
@@ -6,7 +6,8 @@ spring.application.name=product
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 #ZIPKIN
-spring.zipkin.base-url=http://zipkin:9411
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 
 #DATABASE
 spring.datasource.url=jdbc:postgresql://postgres:5432/product_db
