--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
+        <!-- ***************************************** -->
+        <!-- *** TRACEABILITY BETWEEN MICROSERVICES -->
+        <!-- ***************************************** -->
+
         <dependency>
             <!-- Support for app monitoring, including metrics, health checks and so on -->
             <groupId>org.springframework.boot</groupId>
