--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -26,6 +26,7 @@
         <!-- ***************************************** -->
 
         <dependency>
+            <!-- @FeignClient, @EnableFeignClients -->
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
