--- a/washing-machine-app/pom.xml
+++ b/washing-machine-app/pom.xml
@@ -11,27 +11,21 @@
 
 	<artifactId>washing-machine-app</artifactId>
 
-<!--	<properties>-->
-<!--		<querydsl.version>5.1.0</querydsl.version>-->
-<!--	</properties>-->
-
 	<dependencies>
 		<!-- ***************************************** -->
 		<!-- *** CORE -->
 		<!-- ***************************************** -->
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-web</artifactId>-->
-<!--		</dependency>-->
-
-		<!-- ***************************************** -->
-		<!-- *** BACKEND TO BACKEND COMM OPEN FEIGN -->
-		<!-- ***************************************** -->
+		<dependency>
+			<groupId>org.personal</groupId>
+			<artifactId>shared</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<groupId>org.personal</groupId>
+			<artifactId>washing-machine-domain</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- ***************************************** -->
@@ -57,49 +51,21 @@
 		</dependency>
 
 		<!-- ***************************************** -->
-		<!-- *** DATABASE -->
-		<!-- ***************************************** -->
-
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--		</dependency>-->
-
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>com.querydsl</groupId>-->
-<!--			<artifactId>querydsl-jpa</artifactId>-->
-<!--			<version>${querydsl.version}</version>-->
-<!--			<classifier>jakarta</classifier>-->
-<!--		</dependency>-->
-
-<!--		<dependency>-->
-<!--			<groupId>com.querydsl</groupId>-->
-<!--			<artifactId>querydsl-apt</artifactId>-->
-<!--			<version>${querydsl.version}</version>-->
-<!--			<classifier>jakarta</classifier>-->
-<!--		</dependency>-->
-
-		<!-- ***************************************** -->
-		<!-- *** SHARED -->
+		<!-- *** REPORTS -->
 		<!-- ***************************************** -->
 
 		<dependency>
-			<groupId>org.personal</groupId>
-			<artifactId>shared</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.21.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.personal</groupId>
-			<artifactId>washing-machine-domain</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>6.21.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<profiles>
