--- a/washing-machine-domain/pom.xml
+++ b/washing-machine-domain/pom.xml
@@ -16,6 +16,10 @@
 	</properties>
 
 	<dependencies>
+		<!-- ***************************************** -->
+		<!-- *** CORE -->
+		<!-- ***************************************** -->
+
 		<dependency>
 			<groupId>org.personal</groupId>
 			<artifactId>shared</artifactId>
@@ -32,6 +36,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
 			<version>${querydsl.version}</version>
@@ -43,22 +53,6 @@
 			<artifactId>querydsl-apt</artifactId>
 			<version>${querydsl.version}</version>
 			<classifier>jakarta</classifier>
-		</dependency>
-
-		<!-- ***************************************** -->
-		<!-- *** REPORTS -->
-		<!-- ***************************************** -->
-
-		<dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>6.21.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports-fonts</artifactId>
-			<version>6.21.0</version>
 		</dependency>
 
 	</dependencies>
