--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -26,7 +26,7 @@
         <!-- ***************************************** -->
 
         <dependency>
-            <!-- @FeignClient, @EnableFeignClients -->
+            <!-- @FeignClient, @EnableFeignClients, ... -->
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
