--- a/washing-machine-domain/pom.xml
+++ b/washing-machine-domain/pom.xml
@@ -55,5 +55,21 @@
 			<classifier>jakarta</classifier>
 		</dependency>
 
+		<!-- ***************************************** -->
+		<!-- *** REPORTS -->
+		<!-- ***************************************** -->
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.21.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>6.21.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
