1.Updated README maven-profile.jpg. 2.Fixed typo for washing-machine in docker-compose.yaml. 3.Commented out integration test

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
       - zipkin
 
   washing-machine:
-    image: washing-machine:latest
+    image: washing-machine-app:latest
     container_name: washing-machine
     environment:
       - SPRING_PROFILES_ACTIVE=docker
