--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,16 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <!-- Typically: runs after every commit, takes 10-20 minutes, runs mockito-only, in-memory tests -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Exclude all test that have the tag "slow" when running maven lifecycle test -->
+                    <excludedGroups>slow</excludedGroups>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
