--- a/washing-machine-app/pom.xml
+++ b/washing-machine-app/pom.xml
@@ -50,6 +50,23 @@
 			<artifactId>opentelemetry-exporter-zipkin</artifactId>
 		</dependency>
 
+
+		<!-- ***************************************** -->
+		<!-- *** REPORTS -->
+		<!-- ***************************************** -->
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.21.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>6.21.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
