--- a/product/pom.xml
+++ b/product/pom.xml
@@ -59,6 +59,20 @@
 		</dependency>
 
 		<!-- ***************************************** -->
+		<!-- *** DATABASE MIGRATION -->
+		<!-- ***************************************** -->
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+		</dependency>
+
+		<!-- ***************************************** -->
 		<!-- *** SHARED -->
 		<!-- ***************************************** -->
 
