--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -38,6 +38,12 @@
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-exporter-zipkin</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
