--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -12,24 +12,14 @@ spring:
         - id: washing-machine
           uri: http://localhost:8080
           predicates:
-            - Path=/api/v1/washing-machines/**, /api/v1/users/**
-
-        - id: washing-machine-api-docs
-          uri: http://localhost:8080
-          predicates:
-            - Path=/v3/api-docs/washing-machine
+            - Path=/api/v1/washing-machines/**, /api/v1/users/**, /v3/api-docs/washing-machine
           filters:
             - RewritePath=/v3/api-docs/washing-machine, /v3/api-docs  # Forward to actual OpenAPI docs path
 
         - id: product
           uri: http://localhost:8081
           predicates:
-            - Path=/api/v1/products/**
-
-        - id: product-api-docs
-          uri: http://localhost:8081
-          predicates:
-            - Path=/v3/api-docs/product
+            - Path=/api/v1/products/**, /v3/api-docs/product
           filters:
             - RewritePath=/v3/api-docs/product, /v3/api-docs  # Redirect to the correct OpenAPI path
 
