--- a/washing-machine-app/src/main/resources/application-docker.properties
+++ b/washing-machine-app/src/main/resources/application-docker.properties
@@ -25,3 +25,6 @@ spring.servlet.multipart.max-request-size=12MB
 #TODO: Find an easier fix. Avoid Eureka Server for now.
 #TODO: always update this if you modify the APIs of product microservice
 product.service.url=http://product:8081/api/v1/products
+
+#CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
+server.forward-headers-strategy=framework
