added springdoc swagger-ui urls to application-docker.yml

--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -45,3 +45,12 @@ management:
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
+
+springdoc:
+  swagger-ui:
+    urls:
+      - name: washing-machine
+        url: /v3/api-docs/washing-machine
+
+      - name: product
+        url: /v3/api-docs/product
