1.Disabled swagger-ui per module. 2.Added method to handle NoResourceFoundException. 3.Added translated message for NOT_FOUND key

--- a/washing-machine-app/src/main/resources/application-dev.properties
+++ b/washing-machine-app/src/main/resources/application-dev.properties
@@ -28,3 +28,6 @@ product.service.url=http://localhost:8081/api/v1/products
 
 #CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
 server.forward-headers-strategy=framework
+
+#PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
+springdoc.swagger-ui.enabled=false
