--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -10,14 +10,14 @@ spring:
       routes:
         #TODO: Add proper security
         - id: washing-machine
-          uri: http://washing-machine:8080
+          uri: http://hephaestus-washing-machine:8080
           predicates:
             - Path=/api/v1/washing-machines/**, /api/v1/users/**, /v3/api-docs/washing-machine
           filters:
             - RewritePath=/v3/api-docs/washing-machine, /v3/api-docs  # Forward to actual OpenAPI docs path
 
         - id: product
-          uri: http://product:8081
+          uri: http://hephaestus-product:8081
           predicates:
             - Path=/api/v1/products/**, /v3/api-docs/product
           filters:
@@ -40,7 +40,7 @@ management:
       probability: 1.0
   zipkin:
     tracing:
-      endpoint: http://zipkin:9411/api/v2/spans
+      endpoint: http://hephaestus-zipkin:9411/api/v2/spans
 
 logging:
   level:
