--- a/product/src/main/resources/application-docker.properties
+++ b/product/src/main/resources/application-docker.properties
@@ -7,10 +7,10 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 #ZIPKIN
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://hephaestus-zipkin:9411/api/v2/spans
 
 #DATABASE
-spring.datasource.url=jdbc:postgresql://postgres:5432/product_db
+spring.datasource.url=jdbc:postgresql://hephaestus-postgres:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=validate
