--- a/washing-machine-app/src/main/resources/application-docker.properties
+++ b/washing-machine-app/src/main/resources/application-docker.properties
@@ -7,10 +7,10 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 #TRACING
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://hephaestus-zipkin:9411/api/v2/spans
 
 #DATABASE
-spring.datasource.url=jdbc:postgresql://postgres:5432/washing_machine_db
+spring.datasource.url=jdbc:postgresql://hephaestus-postgres:5432/washing_machine_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=validate
@@ -24,7 +24,7 @@ spring.servlet.multipart.max-request-size=12MB
 #WORKAROUND TO HAVE THE FEIGN CLIENT COMMUNICATE BASED ON SELECTED PROFILE
 #TODO: Find an easier fix. Avoid Eureka Server for now.
 #TODO: always update this if you modify the APIs of product microservice
-product.service.url=http://product:8081/api/v1/products
+product.service.url=http://hephaestus-product:8081/api/v1/products
 
 #CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
 server.forward-headers-strategy=framework
