--- a/solar-panel-app/pom.xml
+++ b/solar-panel-app/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>solar-panel</artifactId>
+    <artifactId>solar-panel-app</artifactId>
 
     <dependencies>
         <!-- ***************************************** -->
