--- a/washing-machine-app/pom.xml
+++ b/washing-machine-app/pom.xml
@@ -85,12 +85,15 @@
 			<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
 
+		<!-- ***************************************** -->
+		<!-- *** OPENAPI -->
+		<!-- ***************************************** -->
+
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-
 	</dependencies>
 
 	<profiles>
