--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>washing-machine-app</module>
         <module>washing-machine-domain</module>
         <module>solar-panel-app</module>
+        <module>solar-panel-domain</module>
         <module>product</module>
     </modules>
 
