added separator for openapi

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>opentelemetry-exporter-zipkin</artifactId>
         </dependency>
 
+        <!-- ***************************************** -->
+        <!-- *** OPENAPI -->
+        <!-- ***************************************** -->
+
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
