1.Renamed github action. 2.Deployment is now done manually

--- a/.github/workflows/build-and-push-ghcr.yml
+++ b/.github/workflows/build-and-push-ghcr.yml
@@ -1,9 +1,7 @@
-name: Build and Push Docker Image
+name: Build & Push Docker Images to GitHub Registry (Manual Trigger)
 
 on:
-  push:
-    branches:
-      - staging-demo #TODO: rename this
+  workflow_dispatch:
 
 jobs:
   build:
