--- a/.github/workflows/build-and-push-ghcr.yml
+++ b/.github/workflows/build-and-push-ghcr.yml
@@ -1,4 +1,4 @@
-name: Build & Push Docker Images to GitHub Registry (Manual Trigger)
+name: Build & Push Docker Images to GitHub Registry (Manual)
 
 on:
   workflow_dispatch:
