added azure endpoints

--- a/washing-machine-app/src/main/resources/application-docker-github.properties
+++ b/washing-machine-app/src/main/resources/application-docker-github.properties
@@ -1,7 +1,7 @@
 #ZIPKIN
-management.zipkin.tracing.endpoint=https://zipkin-f3xe.onrender.com/api/v2/spans
+management.zipkin.tracing.endpoint=https://zipkin.orangesmoke-f68e1158.northeurope.azurecontainerapps.io/api/v2/spans
 
 #DATABASE
-spring.datasource.url=jdbc:postgresql://dpg-csga1u0gph6c73f6trd0-a:5432/washing_machine_db
-spring.datasource.username=postgres_render_g520_user
-spring.datasource.password=5Az8gkw2wrQiWiW2Z8q1TfCmhk1JzWtQ
+spring.datasource.url=jdbc:postgresql://hephaestus-postgres.postgres.database.azure.com:5432/washing_machine_db
+spring.datasource.username=postgres
+spring.datasource.password=Xy9#Lm$P
