--- a/washing-machine-app/src/main/resources/application-docker-github.properties
+++ b/washing-machine-app/src/main/resources/application-docker-github.properties
@@ -1,7 +1,7 @@
 #ZIPKIN
-management.zipkin.tracing.endpoint=https://zipkin.orangesmoke-f68e1158.northeurope.azurecontainerapps.io/api/v2/spans
+management.zipkin.tracing.endpoint=https://zipkin.kindmeadow-812476e6.northeurope.azurecontainerapps.io/api/v2/spans
 
 #DATABASE
-spring.datasource.url=jdbc:postgresql://hephaestus-postgres.postgres.database.azure.com:5432/washing_machine_db
+spring.datasource.url=jdbc:postgresql://hephaestus-post-gres.postgres.database.azure.com:5432/washing_machine_db
 spring.datasource.username=postgres
 spring.datasource.password=Xy9#Lm$P
